--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
-    "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "antd-mobile": "^5.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -43,6 +43,7 @@
   },
   "repository": "git@gitlab.alibaba-inc.com:superapp-fe-templates/create-mini-app-scoffolds.git",
   "devDependencies": {
+    "@types/react": "^18.3.26",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
