--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-emas-miniapp",
-  "version": "0.0.13",
+  "version": "0.0.17",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -44,6 +45,7 @@
   "repository": "git@gitlab.alibaba-inc.com:superapp-fe-templates/create-mini-app-scoffolds.git",
   "devDependencies": {
     "@types/react": "^18.3.26",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
