--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "create-emas-miniapp",
-  "version": "0.0.54",
+  "version": "0.0.58",
   "private": true,
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.12",
     "@types/react-dom": "^18.0.10",
     "antd-mobile": "^5.28.0",
+    "monaco-editor": "^0.55.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
